--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost/vollmed_api
+spring.datasource.url=jdbc:mysql://localhost/financeiro
 spring.datasource.username=root
 spring.datasource.password=admin
